# src/main/resources/swagger/webshop_swagger.yaml
@@ -139,6 +139,32 @@ paths:
           description: "Invalid input"
         404:
           description: "One or mote products were not found"
+    get:
+      tags:
+        - "product"
+      summary: "Find all orders between optional time frames"
+      description: "Find all orders between optional time frames"
+      operationId: "getAllOrderBetweenTimeFrames"
+      produces:
+        - "application/json"
+      parameters:
+        - in: query
+          name: "from"
+          type: "string"
+          format: "date-time"
+          description: from date
+        - in: query
+          name: "to"
+          type: "string"
+          format: "date-time"
+          description: to date
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/CreatedOrder"
 definitions:
   Product2Create:
     type: "object"
